--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
+
 </head>
 <body class="night">
     <div class="cursor-dot" data-cursor-dot></div>
@@ -20,9 +23,6 @@
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
                 <li>
-                  <a href="#">Home</a>
-                </li>
-                <li>
                   <a href="#about">About</a>
                 </li>
                 <li>
@@ -30,6 +30,9 @@
                 </li>
                 <li>
                   <a href="#games">Games</a>
+                </li>
+                <li>
+                  <a href="#stories">Stories</a>
                 </li>
                 <li>
                   <a href="#contact">Contact</a>
@@ -72,7 +75,7 @@
         <h2 class="heading">Why Us?</h2>
         <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
         <div class="space fade-in-left-target">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quae in eum quis odio a perferendis repudiandae eaque doloremque, facere non voluptatem tempora. Eum totam, doloremque explicabo recusandae ipsum fuga.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas omnis voluptates voluptatibus? Labore illum maxime similique asperiores eum magnam quisquam doloremque facere voluptas, iste, neque tempore voluptate illo cupiditate rerum. Thank you!!!</p><br><br>
+          <p>Welcome to Mini Minds! Our mission is to help children enrich their school basics while having tons of fun. At Mini Minds, we believe learning should be practical and enjoyable, which is why we've created a special place just for kids aged 5 to 12. Our site is packed with cool games, exciting activities, and interesting stories designed to make learning fun. Our logo represents our commitment to making education both practical and entertaining.</p><br><br>
           <a class="button-about" href="about.html" target="_blank">Know More</a>
       </div>
     </div>
@@ -80,7 +83,7 @@
         <h2 class="heading">What do we do?</h2>
         <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
         <div class="space fade-in-left-target">
-          <p> Recusandae soluta laboriosam a eos maxime sit, ad nesciunt tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet aliquam corporis quasi blanditiis sit natus veniam delectus culpa. Quos itaque deleniti tempora ad quasi perferendis doloremque aspernatur quae eos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim maxime sit distinctio eos dignissimos non tenetur qui odit nesciunt! Debitis officia odit labore ipsam iste soluta maiores excepturi nisi incidunt.</p><br><br>
+          <p>Interactive Stories: Our engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
           <a class="button-courses" href="courses.html" target="_blank">Explore courses</a>
         </div>
     </div>
