--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </li>
             </ul><br>
             <button class="sign-in" onclick="signIn()">Sign in</button>
-            <p>no account? <a onclick="signUp()">Sign up</a></p>
+            <p>no account? <a href="#" onclick="signUp()">Sign up</a></p>
         </div>
         <!--Cloud resource-->
         <div class="floating-clouds">
