contact section updated

--- a/index.html
+++ b/index.html
@@ -125,28 +125,37 @@
     <!--Course list section Ends-->
     <!--Contact Us section starts-->
     <footer>
-      <div id="contact" class="contact">
-        <h2 class="heading">Contact Us</h2>
-        <div>
-          <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India - 524001</p>
-          <p><strong>Contact:</strong><br>0123456789,0123456789</p>
-        </div>
-        <div><p><strong>Social Links: </strong></p><ul class="icons">
-          <li>
-              <a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-          </li>
-          <li>
-            <a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          </li>
-          <li>
-            <a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-          </li>
-          <li>
-            <a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-          </li>
-        </ul><br></div>
+      <div class="footer-container">
+          <div class="footer-brand contact">
+              <a>Mini <span>Minds</span></a>
+          </div>
+          <div class="footer-section" id="contact">
+              <h2 class="heading">Contact Us</h2>
+              <div>
+                  <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India</p>
+                  <p><strong>Contact:</strong><br>0123456789, 0123456789</p>
+              </div>
+              <div class="social-links">
+                  <p><strong>Social Links: </strong></p>
+                  <ul>
+                      <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                      <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                      <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                      <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="footer-section">
+              <h2 class="heading">Quick Links</h2>
+              <ul class="quick-links">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </div>
       </div>
-    </footer>
+  </footer>
     <!--Contact Us section Ends-->
     <!--classes for special effect at night -->
     <div class="sky"></div>
