--- a/stories.html
+++ b/stories.html
@@ -49,6 +49,29 @@
         </nav>
     </header>
     <!--Navigation Bar Code ends-->
+    <!--Introduction about the stories-->
+    <div class="games" id="games">
+      <div>
+      <h2 class="heading">Stories</h2>
+      </div>
+      <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
+      <div class="space fade-in-left-target">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magni perferendis laudantium nemo pariatur aperiam maxime aliquid doloribus dolore quisquam minus enim, fuga incidunt corporis quaerat vel voluptates delectus dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta non maxime dignissimos earum ea eligendi atque ex possimus dolorem quasi sunt repellat, unde delectus dolore, minus ad ullam enim qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea atque tenetur, debitis inventore cumque sunt delectus. Voluptas odit tenetur ullam sed voluptatum veniam laboriosam? Nisi dolore voluptatem temporibus facilis similique.</p><br><br>
+        <a class="button-games" href="courses.html" target="_blank">Coming soon!!</a>
+      </div>
+    </div>
+    <!--Games section Ends-->
+    <!--Course list section Starts-->
+    <div id="course-list" class="course-list">
+      <h2 class="heading">Our Stories</h2><br>
+      <div class="box fade-in-left-target"></div>
+      <div class="box fade-in-right-target"></div>
+      <div class="box fade-in-left-target"></div>
+      <div class="box fade-in-right-target"></div>
+      <div class="box fade-in-left-target"></div>
+      <div class="box fade-in-right-target"></div>
+    </div>
+    <!--Course list section Ends-->
     <!--Contact Us section starts-->
     <footer>
       <div class="footer-container">
