--- a/about.html
+++ b/about.html
@@ -1,38 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Mini Minds</title>
-        <link rel="icon" type="image" href="images/miniminds.png">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    </head>
-    <body class="night">
-        <div class="cursor-dot" data-cursor-dot></div>
-        <div class="cursor-outline" data-cursor-outline></div>
-        <header>
-            <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
-            <nav>
-                <div id="menu-icon" class="menu-icon">&#9776;</div>
-                <ul id="menu-items">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Games</a></li>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="index.html">Courses</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="aboutus">
-            <h2 class="heading">About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis porro, error ad eveniet, placeat sequi blanditiis aliquid sapiente rerum ab quo autem nobis iste eligendi, iusto quae consequatur adipisci suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam modi nihil doloremque, ipsa cum perferendis. Doloremque quae qui in laudantium accusantium eum itaque minus, asperiores ullam officiis inventore ipsa labore?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, beatae. Nam voluptas ab debitis blanditiis deserunt, quasi perferendis temporibus ad distinctio eum aperiam, vero dolore beatae odio iure adipisci ducimus?lorm
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi aperiam nesciunt mollitia numquam assumenda? Quia, recusandae corrupti repellat, hic quod atque amet animi ducimus eveniet beatae, delectus quidem inventore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perspiciatis nam dignissimos. Reiciendis ea enim, architecto beatae at rem vel quae voluptates, a eius officia consectetur sequi dolorum. Eligendi, voluptatibus?</Illo>
-            </p>
-        </div>
-        <script src="script.js"></script>
-    </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Mini Minds</title>
+    <link rel="icon" type="image" href="images/logo.png">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body class="night">
+  <!--Cursor dot container-->
+  <div class="cursor-dot" data-cursor-dot></div>
+  <div class="cursor-outline" data-cursor-outline></div>
+  <!--Cursor dot container-->
+  <!--Loader animation-->
+  <div id="pulse-wrapper">
+    <div id="pulse">
+        <span></span>
+        <span></span>
+    </div>
+  </div>
+  <!--End of loader-->
+    <!--Navigation Bar Code Starts-->
+    <header>
+        <div class="logo"><a href="#hero">Mini <span>Minds</span></a></div>
+        <nav>
+            <div id="menu-icon" class="menu-icon">&#9776;</div>
+            <ul id="menu-items">
+                <li>
+                  <a href="#about">About</a>
+                </li>
+                <li>
+                  <a href="#courses">Courses</a>
+                </li>
+                <li>
+                  <a href="#games">Games</a>
+                </li>
+                <li>
+                  <a href="#stories">Stories</a>
+                </li>
+                <li>
+                  <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--Navigation Bar Code ends-->
+    <!--About section Starts-->
+    <div id="about" class="about">
+        <h2 class="heading">About Us</h2>
+        <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
+        <div class="space fade-in-left-target">
+          <p>Our mission is to help children enrich their school basics while having tons of fun. At Mini Minds, we believe learning should be practical and enjoyable, which is why we've created a special place just for kids aged 5 to 12. Our site is packed with cool games, exciting activities, and interesting stories designed to make learning fun..</p>
+          <strong>Why Trust Mini Minds?</strong>
+          <b>Scientifically Backed Fun:</b>
+          <p>Studies show that children learn best when they are engaged and enjoying themselves. Our activities are designed to be both fun and educational, helping kids retain information better. </p>
+          <b><i>Boosts Cognitive Skills: </i></b>
+          <p>Interactive learning can enhance problem-solving and critical thinking skills. Our games and activities are crafted to support these essential abilities.</p>
+          <b><i>Positive Learning Environment:</i></b>
+          <p>Creating a positive association with learning can foster a lifelong love of knowledge. Mini Minds is all about making education enjoyable and rewarding.</p><br><br>
+          <a class="button-about" href="courses.html" target="_blank">Explore Courses</a>
+      </div>
+    </div>
+    <!--About section Ends-->
+    <!--Contact Us section starts-->
+    <footer>
+      <div class="footer-container">
+          <div class="footer-brand contact">
+              <a>Mini <span>Minds</span></a>
+          </div>
+          <div class="footer-section" id="contact">
+              <h2 class="heading">Contact Us</h2>
+              <div>
+                  <p><strong>Address:</strong><br>Nellore, Andhra <br>Pradesh, India</p>
+                  <p><strong>Contact:</strong><br>0123456789, <br>0123456789</p>
+              </div>
+              <div class="social-links">
+                  <p><strong>Social Links: </strong></p>
+                  <ul>
+                      <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                      <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                      <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                      <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="footer-section">
+              <h2 class="heading">Quick Links</h2>
+              <ul class="quick-links">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="courses.html">Courses</a></li>
+                  <li><a href="stories.html">Stories</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </div>
+          <div class="footer-section"><p>&copy; 2024 Mini Minds. All rights reserved.</p></div>
+      </div>
+  </footer>
+    <!--Contact Us section Ends-->
+    <script src="script.js"></script>
