--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Mini Minds</title>
-    <link rel="icon" type="image" href="images/miniminds.png">
+    <link rel="icon" type="image" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
@@ -18,6 +18,14 @@
   <div class="cursor-dot" data-cursor-dot></div>
   <div class="cursor-outline" data-cursor-outline></div>
   <!--Cursor dot container-->
+  <!--Loader animation-->
+  <div id="pulse-wrapper">
+    <div id="pulse">
+        <span></span>
+        <span></span>
+    </div>
+  </div>
+  <!--End of loader-->
     <!--Navigation Bar Code Starts-->
     <header>
         <div class="logo"><a href="#hero">Mini <span>Minds</span></a></div>
@@ -148,12 +156,14 @@
           <div class="footer-section">
               <h2 class="heading">Quick Links</h2>
               <ul class="quick-links">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="courses.html">Courses</a></li>
+                  <li><a href="stories.html">Stories</a></li>
+                  <li><a href="contact.html">Contact</a></li>
               </ul>
           </div>
+          <div class="footer-section"><p>&copy; 2024 Mini Minds. All rights reserved.</p></div>
       </div>
   </footer>
     <!--Contact Us section Ends-->
