--- a/about.html
+++ b/about.html
@@ -31,16 +31,16 @@
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
                 <li>
-                  <a href="#about">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="#courses">Courses</a>
+                  <a href="courses.html">Courses</a>
                 </li>
                 <li>
-                  <a href="#games">Games</a>
+                  <a href="stories.html">Games</a>
                 </li>
                 <li>
-                  <a href="#stories">Stories</a>
+                  <a href="stories.html">Stories</a>
                 </li>
                 <li>
                   <a href="#contact">Contact</a>
