--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!--Loader animation-->
   <div id="pulse-wrapper">
     <div id="pulse">
+        <img src="images/logo.png" alt="logo">
         <span></span>
         <span></span>
     </div>
@@ -36,13 +37,13 @@
                   <a href="#about">About</a>
                 </li>
                 <li>
-                  <a href="#courses">Courses</a>
+                  <a href="#courses">Stories</a>
                 </li>
                 <li>
                   <a href="#games">Games</a>
                 </li>
                 <li>
-                  <a href="#stories">Stories</a>
+                  <a href="#course-list">Courses</a>
                 </li>
                 <li>
                   <a href="#contact">Contact</a>
@@ -123,12 +124,13 @@
     <!--Course list section Starts-->
     <div id="course-list" class="course-list">
       <h2 class="heading">Our Courses</h2><br>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
+      <div class="div-course">
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/English.png" alt=""></div>
+      <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Maths.png" alt=""></div>
+      <div class="box fade-in-right-target"><img src="images/Laptop.png" alt=""></div>
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Pencil.png" alt=""></div>
+    </div>
     </div>
     <!--Course list section Ends-->
     <!--Contact Us section starts-->
@@ -143,17 +145,17 @@
                   <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India</p>
                   <p><strong>Contact:</strong><br>0123456789, 0123456789</p>
               </div>
-              <div class="social-links">
-                  <p><strong>Social Links: </strong></p>
-                  <ul>
-                      <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                      <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                      <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                      <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                  </ul>
-              </div>
           </div>
-          <div class="footer-section">
+          <div class=" footer-section social-links-div">
+            <h2 class="heading">Social Links</h2>
+            <ul class="quick-links">
+                <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
+                <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+                <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
+            </ul>
+        </div>
+          <div class="footer-section quick-links-div">
               <h2 class="heading">Quick Links</h2>
               <ul class="quick-links">
                   <li><a href="index.html">Home</a></li>
@@ -163,7 +165,6 @@
                   <li><a href="contact.html">Contact</a></li>
               </ul>
           </div>
-          <div class="footer-section"><p>&copy; 2024 Mini Minds. All rights reserved.</p></div>
       </div>
   </footer>
     <!--Contact Us section Ends-->
