--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!--End of loader-->
     <!--Navigation Bar Code Starts-->
     <header>
-        <div class="logo"><a href="#hero">Mini <span>Minds</span></a></div>
+        <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
         <nav>
             <div id="menu-icon" class="menu-icon">&#9776;</div>
             <ul id="menu-items">
