--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div id="course-list" class="course-list">
       <h2 class="heading">Our Courses</h2><br>
       <div class="div-course">
-      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/English.png" alt=""></div>
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Physics.png" alt=""></div>
       <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Maths.png" alt=""></div>
       <div class="box fade-in-right-target"><img src="images/Laptop.png" alt=""></div>
