--- a/courses.html
+++ b/courses.html
@@ -26,29 +26,29 @@
   <!--End of loader-->
     <!--Navigation Bar Code Starts-->
     <header>
-        <div class="logo"><a href="#hero">Mini <span>Minds</span></a></div>
-        <nav>
-            <div id="menu-icon" class="menu-icon">&#9776;</div>
-            <ul id="menu-items">
-                <li>
-                  <a href="#about">About</a>
-                </li>
-                <li>
-                  <a href="#courses">Courses</a>
-                </li>
-                <li>
-                  <a href="#games">Games</a>
-                </li>
-                <li>
-                  <a href="#stories">Stories</a>
-                </li>
-                <li>
-                  <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <!--Navigation Bar Code ends-->
+      <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
+      <nav>
+          <div id="menu-icon" class="menu-icon">&#9776;</div>
+          <ul id="menu-items">
+              <li>
+                <a href="#about">About</a>
+              </li>
+              <li>
+                <a href="#courses">Stories</a>
+              </li>
+              <li>
+                <a href="#games">Games</a>
+              </li>
+              <li>
+                <a href="#course-list">Courses</a>
+              </li>
+              <li>
+                <a href="#contact">Contact</a>
+              </li>
+          </ul>
+      </nav>
+  </header>
+  <!--Navigation Bar Code ends-->
     <!--Courses section Starts-->
     <div id="courses" class="courses space">
         <h2 class="heading">What do we do?</h2>
