--- a/stories.html
+++ b/stories.html
@@ -61,52 +61,54 @@
       </div>
     </div>
     <!--Games section Ends-->
-    <!--Course list section Starts-->
+    <!--Stories list section Starts-->
     <div id="course-list" class="course-list">
-      <h2 class="heading">Our Stories</h2><br>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
-      <div class="box fade-in-left-target"></div>
-      <div class="box fade-in-right-target"></div>
+      <h2 class="heading">Our Courses</h2><br>
+      <div class="div-course">
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/solar.png" alt=""></div>
+      <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Maths.png" alt=""></div>
+      <div class="box fade-in-right-target"><img src="images/Laptop.png" alt=""></div>
+      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Pencil.png" alt=""></div>
     </div>
-    <!--Course list section Ends-->
-    <!--Contact Us section starts-->
-    <footer>
-      <div class="footer-container">
-          <div class="footer-brand contact">
-              <a>Mini <span>Minds</span></a>
-          </div>
-          <div class="footer-section" id="contact">
-              <h2 class="heading">Contact Us</h2>
-              <div>
-                  <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India</p>
-                  <p><strong>Contact:</strong><br>0123456789, 0123456789</p>
-              </div>
-          </div>
-          <div class=" footer-section social-links-div">
-            <h2 class="heading">Social Links</h2>
-            <ul class="quick-links">
-                <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-                <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
-            </ul>
-        </div>
-          <div class="footer-section quick-links-div">
-              <h2 class="heading">Quick Links</h2>
-              <ul class="quick-links">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="courses.html">Courses</a></li>
-                  <li><a href="stories.html">Stories</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-              </ul>
+    </div>
+    <!--Stories list section Ends-->
+ <!--Contact Us section starts-->
+ <footer>
+  <div class="footer-container">
+      <div class="footer-brand contact">
+          <a>Mini <span>Minds</span></a>
+      </div>
+      <div class="footer-section" id="contact">
+          <h2 class="heading">Contact Us</h2>
+          <div>
+              <p><strong>Address:</strong><br>India</p>
+              <p><strong>Contact:</strong><br>0123456789</p>
           </div>
       </div>
-  </footer>
-    <!--Contact Us section Ends-->
+      <div class=" footer-section social-links-div">
+        <h2 class="heading">Social</h2>
+        <ul class="quick-links">
+            <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
+            <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
+        </ul>
+    </div>
+    <div class="links-div">
+      <div class="footer-section quick-links-div">
+          <h2 class="heading">Quick Links</h2>
+          <ul class="quick-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="courses.html">Courses</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+<!--Contact Us section Ends-->
     <script src="script.js">
         /*Function for Menu bar*/
    menuIcon.addEventListener('click', (event) => {
