--- a/contact.html
+++ b/contact.html
@@ -49,41 +49,42 @@
       </nav>
   </header>
   <!--Navigation Bar Code ends-->
-    <!--Contact Us section starts-->
-    <footer>
-      <div class="footer-container">
-          <div class="footer-brand contact">
-              <a>Mini <span>Minds</span></a>
-          </div>
-          <div class="footer-section" id="contact">
-              <h2 class="heading">Contact Us</h2>
-              <div>
-                  <p><strong>Address:</strong><br>Nellore, Andhra Pradesh, India</p>
-                  <p><strong>Contact:</strong><br>0123456789, 0123456789</p>
-              </div>
-          </div>
-          <div class=" footer-section social-links-div">
-            <h2 class="heading">Social Links</h2>
-            <ul class="quick-links">
-                <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-                <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
-            </ul>
-        </div>
-          <div class="footer-section quick-links-div">
-              <h2 class="heading">Quick Links</h2>
-              <ul class="quick-links">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="courses.html">Courses</a></li>
-                  <li><a href="stories.html">Stories</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-              </ul>
+ <!--Contact Us section starts-->
+ <footer>
+  <div class="footer-container">
+      <div class="footer-brand contact">
+          <a>Mini <span>Minds</span></a>
+      </div>
+      <div class="footer-section" id="contact">
+          <h2 class="heading">Contact Us</h2>
+          <div>
+              <p><strong>Address:</strong><br>India</p>
+              <p><strong>Contact:</strong><br>0123456789</p>
           </div>
       </div>
-  </footer>
-    <!--Contact Us section Ends-->
+      <div class=" footer-section social-links-div">
+        <h2 class="heading">Social</h2>
+        <ul class="quick-links">
+            <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
+            <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
+        </ul>
+    </div>
+    <div class="links-div">
+      <div class="footer-section quick-links-div">
+          <h2 class="heading">Quick Links</h2>
+          <ul class="quick-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="courses.html">Courses</a></li>
+              <li><a href="stories.html">Stories</a></li>
+          </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+<!--Contact Us section Ends-->
     <script src="script.js">
         /*Function for Menu bar*/
    menuIcon.addEventListener('click', (event) => {
