--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
       <div class="footer-section" id="contact">
           <h2 class="heading">Contact Us</h2>
           <div>
-              <p><strong>Address:</strong><br>India</p>
+              <p><strong>Address:</strong><br>AP, India</p>
               <p><strong>Contact:</strong><br>0123456789</p>
           </div>
       </div>
