--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
               <a>Mini <span>Minds</span></a>
           </div>
           <div class="footer-section" id="contact">
-              <h2 class="heading">Contact Us</h2>
+              <h2 class="heading">Contacts</h2>
               <div>
                   <p><strong>Address:</strong><br>AP, India</p>
                   <p><strong>Contact:</strong><br>0123456789</p>
