--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <a>Mini <span>Minds</span></a>
       </div>
       <div class="footer-section" id="contact">
-          <h2 class="heading">Contact Us</h2>
+          <h2 class="heading">Contacts</h2>
           <div>
               <p><strong>Address:</strong><br>AP, India</p>
               <p><strong>Contact:</strong><br>0123456789</p>
@@ -168,9 +168,9 @@
   </div>
 </footer>
 <!--Contact Us section Ends-->
-    <!--classes for special effect at night -->
-    <div class="sky"></div>
-    <div class="stars"></div>
-    <!--classes for special effect at night -->
-    <script src="script.js"></script>
-    
+<!--classes for special effect at night -->
+<div class="sky"></div>
+<div class="stars"></div>
+<!--classes for special effect at night -->
+<script src="script.js"></script>
+</body>
